Mobile automation coe changes